feat(service-account): add http handlers, openapi spec and store implementation
